--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
                                         <i class="mdi mdi-phone-outline fs-24 text-primary"></i>
                                     </div>
                                     <div class="icon-content ms-3">
-                                        <p class="mb-0 fs-15">+91 7697134405</p>
+                                        <p class="mb-0 fs-15">Not Available</p>
                                         <p class="mb-0 fs-15">(HIDDEN)</p>
                                     </div>
                                 </div>
@@ -728,7 +728,7 @@
                     <h5 class="text-white">Sign up</h5>
                     <p class="mb-0 text-white-50 mt-4">Follow our newsletter to stay updated about agency.</p>
                     <div class="input-group my-3">
-                        <input type="text" class="form-control p-3" placeholder="subscribe" aria-label="subscribe" aria-describedby="basic-addon2">
+                        <input type="text" class="form-control p-3" placeholder="Email Address" aria-label="subscribe" aria-describedby="basic-addon2">
                         <a href="" class="input-group-text bg-primary text-white px-4" id="basic-addon2">Go</a>
                     </div>
                     <p></p>
