--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Arin Dewangan - Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This is a portfolio website of Arin Dewangan the Founder and CEO of Arin Network Foundation" />
+    <meta name="description" content="This is a portfolio website of Arin Dewangan the Founder and CEO of Cybs Innovations Pvt. Ltd." />
     <meta name="keywords" content="" />
     <meta content="Arin Dewangan" name="author" />
 
@@ -160,7 +160,7 @@
                                                 <span class="wrap text-dark"></span>
                                             </span>
                                         </div>
-                                        <p class="mt-3 text-muted">Founder and CEO of Arin Network Foundation, Working with full of positivity and in love to code,crack and hack.</p>
+                                        <p class="mt-3 text-muted">Founder and CEO of Cybs Innovations Pvt. Ltd., Working with full of positivity and in love to code, crack and hack.</p>
 
                                         <div class="icon-item mt-4">
                                             <div class="d-flex">
