--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
                     <li class="nav-item dropdown dropdown-hover">
                         <a href="#work" class="nav-link ">Work</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="#blog" class="nav-link">Blog</a>
-                    </li>
+                    
                     <li class="nav-item">
                         <a href="#contact" class="nav-link">Contact</a>
                     </li>
@@ -179,7 +177,7 @@
                                                         <i class="mdi mdi-twitter"></i>
                                                     </div>
                                                 </a>
-                                                <a href="https://linkedin.com/in/arin-dewangan">
+                                                <a href="https://linkedin.com/in/arindewangan">
                                                     <div class="social-icon linkedin avatar-sm">
                                                         <i class="mdi mdi-linkedin"></i>
                                                     </div>
@@ -196,7 +194,7 @@
                                         <div class="home-link d-inline-block mt-5">
                                             <div class="d-flex align-items-center">
                                                 <div class="btn-link ">
-                                                    <a href="" class="text-dark h6">
+                                                    <a href="https://www.cybsinnovations.com" target="_blank" class="text-dark h6">
                                                         <div class="read-link btn-link-warning"><span>See my work
                                                             </span></div>
                                                     </a>
@@ -211,7 +209,7 @@
 
                                 <div class="col-lg-6">
                                     <div class="my-image">
-                                        <img src="images/newimages/arin-nobg-min.png" alt="" class="img-fluid">
+                                        <img src="images/newimages/arin-image.png" alt="" class="img-fluid">
                                     </div>
                                 </div>
                             </div>
@@ -237,7 +235,7 @@
                     <div class="col-lg-6 position-relative">
                         <div class="image-round"></div>
                         <div class="about-image p-4 pb-0">
-                            <img src="images/newimages/arin2-nobg.png" alt="" style="border-radius: 49%;" class="img-fluid">
+                            <img src="images/newimages/arin-image-2.jpg" alt="" style="border-radius: 49%;" class="img-fluid">
                         </div>
                     </div>
 
@@ -436,89 +434,6 @@
 
 
 
-    <!-- start blog -->
-    <section class="section blog" id="blog">
-        <!-- start container -->
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <div class="text-center mb-4">
-                        <h6 class="mb-0 text-muted fs-15">Blog</h6>
-                        <h2>My Top Artilces</h2>
-                        <p class="para-width text-muted mb-0 fs-15">Let These Amazing articles makes your day </p>
-                    </div>
-                </div>
-            </div>
-            <!-- end row -->
-
-            <div class="row">
-                <div class="col-lg-4 mt-4 pt-2">
-                    <div class="blog-item p-4 box-shadow">
-                        <div class="blog-image">
-                            <img src="images/blog/img-1.png" alt="" class="img-fluid">
-                            <div class="blog-image-icon bg-blue">
-                                <i class="mdi mdi-lan fs-24"></i>
-                            </div>
-                        </div>
-                        <div class="blog-content mt-5">
-                            <!-- <p class="text-muted fw-semibold mb-2">May 25, 2021</p> -->
-                            <a href="">
-                                <h5>How to Hack ?</h5>
-                            </a>
-                            <p class="fs-15 text-muted">The full information about hackingand it's pros and cons with techniques and ethics.</p>
-                            <a href="" class="text-dark fw-semibold">Learn more <i
-                                    class="mdi mdi-arrow-right fs-16"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 mt-4 pt-2">
-                    <div class="blog-item p-4 box-shadow">
-                        <div class="blog-image">
-                            <img src="images/blog/img-2.png" alt="" class="img-fluid">
-                            <div class="blog-image-icon bg-secondary">
-                                <i class="mdi mdi-responsive fs-24"></i>
-                            </div>
-                        </div>
-                        <div class="blog-content mt-5">
-                            <!-- <p class="text-muted fw-semibold mb-2">May 25, 2021</p> -->
-                            <a href="">
-                                <h5>The Coder's Life</h5>
-                            </a>
-                            <p class="fs-15 text-muted">Get to know about the full journey of a coder and its day to day life.</p>
-                            <a href="" class="text-dark fw-semibold">Learn more <i
-                                    class="mdi mdi-arrow-right fs-16"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 mt-4 pt-2">
-                    <div class="blog-item p-4 box-shadow">
-                        <div class="blog-image">
-                            <img src="images/blog/img-3.png" alt="" class="img-fluid">
-                            <div class="blog-image-icon bg-primary">
-                                <i class="mdi mdi-vector-combine fs-24"></i>
-                            </div>
-                        </div>
-                        <div class="blog-content mt-5">
-                            <!-- <p class="text-muted fw-semibold mb-2">May 25, 2021</p> -->
-                            <a href="">
-                                <h5>How to Earn ?</h5>
-                            </a>
-                            <p class="fs-15 text-muted">As we all know Money plays the lead role of our life, and it's important to earn </p>
-                            <a href="" class="text-dark fw-semibold">Learn more <i
-                                    class="mdi mdi-arrow-right fs-16"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- end container -->
-    </section>
-    <!-- end blog -->
-
-
-
     <!-- start contact -->
     <section class="contact pt-5 pb-0" id="contact">
         <!-- start container -->
@@ -709,7 +624,7 @@
                         <div class="col-lg-10">
                             <div class="linkedin-box mt-4">
                                 <p class="mb-0 text-white-50 fs-15 mb-2">The full monty spiffing good time .</p>
-                                <a href="https://linkedin.com/in/arin-dewangan" class="fs-15">@arindewangan</a>
+                                <a href="https://linkedin.com/in/arindewangan" class="fs-15">@arindewangan</a>
                             </div>
                         </div>
                     </div>
