--- a/index-3-dark.html
+++ b/index-3-dark.html
@@ -74,9 +74,7 @@
                     <li class="nav-item">
                         <a href="#testi" class="nav-link">Testimonial</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="#blog" class="nav-link">Blog</a>
-                    </li>
+                    
                     <li class="nav-item">
                         <a href="#contact" class="nav-link">Contact</a>
                     </li>
@@ -562,86 +560,7 @@
 
 
    
-    <!-- start my-work -->
-    <section class="section my-work" id="work">
-        <!-- start container -->
-        <div class="container">
-            <div class="row">
-                <div class="d-flex align-items-center">
-                    <div class="left-text">
-                        <h2 class="mb-0">My Latest Work</h2>
-                        <p class="fs-15 text-muted">Prefect solution for digital experience</p>
-                    </div>
-                    <div class="right-text ms-auto">
-                        <a href="" class="text-primary border-2 border-primary border-bottom">More Work <img
-                                src="images/home/right-arrow-primary.png" alt="" class="img-fluid mb-1 ms-2"></a>
-                    </div>
-                </div>
-            </div>
-            <!-- end row -->
-
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="work-slider" id="work-slider">
-                        <div class="item">
-                            <div class="work-image position-relative">
-                                <a href="">
-                                    <img src="images/work/img-1.png" alt="" class="img-fluid">
-                                    <div class="image-title mt-5 ms-5">
-                                        <h4 class="mb-0">Web Design</h4>
-                                        <p>E-Commerce</p>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-
-                        <!-- slider item -->
-                        <div class="item">
-                            <div class="work-image">
-                                <a href="">
-                                    <img src="images/work/img-2.png" alt="" class="img-fluid">
-                                    <div class="image-title mt-5 ms-5">
-                                        <h4 class="mb-0">NFT Web Design</h4>
-                                        <p>NFT Maerketplace</p>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-
-                        <!-- slider item -->
-                        <div class="item">
-                            <div class="work-image">
-                                <a href="">
-                                    <img src="images/work/img-3.png" alt="" class="img-fluid">
-                                    <div class="image-title mt-5 ms-5 text-white">
-                                        <h4 class="mb-0">App Design</h4>
-                                        <p class="text-white-50">Mobile App </p>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-
-                        <!-- slider item -->
-                        <div class="item">
-                            <div class="work-image">
-                                <a href="">
-                                    <img src="images/work/img-4.png" alt="" class="img-fluid">
-                                    <div class="image-title mt-5 ms-5 text-white">
-                                        <h4 class="mb-0">Web Design</h4>
-                                        <p class="text-white-50">E-Commerce</p>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-
-                    </div>
-
-                </div>
-            </div>
-        </div>
-        <!-- end container -->
-    </section>
-    <!-- end my-work -->
+    
 
 
     <!-- start pricing -->
@@ -1516,7 +1435,7 @@
                 <div class="col-lg-6">
                     <p class="mb-0 text-center text-muted">©
                         <script>document.write(new Date().getFullYear())</script> Harold. Design with <i
-                            class="mdi mdi-heart text-danger"></i> by <a href="https://themesdesign.in/" target="_blank"
+                            class="mdi mdi-heart text-danger"></i> by <a href="https://www.cybsinnovations.com/" target="_blank"
                             class="text-muted">Themesdesign.</a>
                     </p>
                 </div>
